--- a/main.html
+++ b/main.html
@@ -8,6 +8,35 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="header">
+      <h2 class="shaw-heading">Shaw's News</h2>
+    </div>
+    <div class="container">
+      <div class="latest-news-section">
+        <h3>Latest News Articles</h3>
+        <ul>
+          <li><a href="#">Article1</a></li>
+          <li><a href="#">Article2</a></li>
+          <li><a href="#">Article3</a></li>
+        </ul>
+      </div>
+      <div class="main-article">
+        <h3>Main Article</h3>
+        <p class="main-para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia sapiente adipisci eveniet repellat, porro blanditiis enim esse dignissimos, suscipit quis consequatur vel at ratione! Voluptas, vel! Maiores ullam eius accusamus ratione natus fugit provident libero. Architecto dignissimos repudiandae aperiam qui!</p>
+      </div>
+      <div class="pictorial-news-section">
+        <h3>Pictorial News</h3>
+        <div class="image-one">
+          <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="image-one">
+        </div>
+        <div class="image-two">
+          <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="image-two">
+        </div>
+        <div class="image-three">
+          <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="image-three">
+        </div>
+      </div>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
