--- a/main.html
+++ b/main.html
@@ -8,9 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="header">
+	<header>
+		<div class="header">
       <h2 class="shaw-heading">Shaw's News</h2>
     </div>
+	</header>
     <div class="container">
       <div class="latest-news-section">
         <h3>Latest News Articles</h3>
